# SeleniumScraper

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/: codecov.yml  dependabot.yml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml  ruff.yml
docs/source/: conf.py  contributing.rst  getting_started.rst  index.rst
docs/source/api_reference/: index.rst
docs/source/api_reference/browsers/: chrome.rst  firefox.rst  index.rst
docs/source/api_reference/helpers/: index.rst  urls.rst
selenium_scraper/: __init__.py  base_scraper.py  browsers.py  logger.py  mapping.py  scraper.py
selenium_scraper/helpers/: urls.py
tests/: conftest.py  test_get_all_links.py  test_get_page.py  test_scraper_init_del.py  test_scroll.py  test_web_app.py
tests/helpers/: test_urls_page_links.py  test_urls_update_url_params.py
tests/web_app/: app.py
tests/web_app/templates/: infinite_page.html  page_with_various_links.html
