[tool.poetry]
name = "seleniumscraper"
version = "0.1.0"
description = ""
authors = ["Grigoruk Maxim <grimax14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
deptry = "^0.12.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.2"
unicorn = "^2.0.1.post1"
fastapi = "^0.103.1"
mypy = "^1.5.1"
ruff = "^0.0.290"
requests = "^2.31.0"
coverage = "^7.3.1"


[tool.poetry.group.scraper.dependencies]
selenium = "^4.12.0"
psutil = "^5.9.5"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
furo = "^2023.9.10"


[tool.ruff]
target-version = "py311"
line-length = 120
select = ["ALL"]
ignore = [
    "D100", # pydocstyle - missing docstring in public module
    "D107", # pydocstyle - missing docstring in `__init__`
    "D104", # pydocstyle - missing docstring in public package
    "S101", # flake8-bandit - use of `assert` detected
    "ANN101", # flake8-annotations - missing type annotation for `self` in method
    "INP001", # flake8-no-pep420 - file `*` is part of an implicit namespace package. Add an `__init__.py`.
    "F401", # unused import
    "RUF002", # Docstring contains ambiguous
]
src = ["selenium_scraper", "tests"]


[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
