[tool.poetry]
name = "selenium_scraper"
version = "0.1.0"
description = "Tool to speed up writing Selenium parsers"
authors = ["Nikita Paramonov <nikita@nparamonov.ru>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "selenium_scraper"}]
repository = "https://github.com/nparamonov/SeleniumScraper"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.15"
psutil = "^5.9"
beautifulsoup4 = "^4.12"
lxml = "^4.9"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4"
uvicorn = "^0.23"
fastapi = {version = "^0.100", extras = ["all"]}
requests = "^2.31"
coverage = {version = "^7", extras = ["toml"]}

[tool.poetry.group.docs.dependencies]
sphinx = "7.0.1"
sphinx-copybutton = "0.5.2"
furo = "2023.5.20"

[tool.poetry.group.linters.dependencies]
pylint = ">=2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
command_line = "-m pytest tests -v"
data_file = ".coverage/coverage"

[tool.coverage.report]
fail_under = 80
show_missing = true
